# automated-short-answer-grading

./: .env  README.md  pyproject.toml
data/: extracted_prompt.txt
notebooks/: EDA.ipynb  asag_cot.json  asag_cot_better_instruction_prompt.json  training_model.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  explore_data-checkpoint.ipynb  training_model-checkpoint.ipynb
src/asag/: grading_model.py  main.py
